Larger dataset (n=140). See _v2 notebook
- Replicated previous analysis with larger sample
- Dataset now balanced
- Next step: proceed to modelling

--- a/data_processing_and_exploration_v1.ipynb
+++ b/data_processing_and_exploration_v1.ipynb
@@ -149,7 +149,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"darts_data.csv\")\n",
+    "df = pd.read_csv(\"darts_data_v1.csv\")\n",
     "df.head()"
    ]
   },
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "f1f08ef6",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6ab608a",
+   "id": "4bc12bf4",
    "metadata": {},
    "source": [
     "### III. Relationship Between $x_{\\Delta \\text{ThreeDartAvg}}$, $x_{\\Delta \\text{CheckoutRate}}$ and Match Outcome"
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "6b13d70d",
    "metadata": {},
    "outputs": [
@@ -1103,16 +1103,8 @@
    "id": "0e17b8a6",
    "metadata": {},
    "source": [
-    "Comparing both player performance metrics with match outcomes, we observe that the "
+    "Comparing player performance metrics with match outcomes, we observe the expected relationship: players are more likely to win as their performance metrics improve. For example, the blue quadrant represents matches where `player1` had both a superior three-dart average and checkout rate compared to `player2`, and we notice most outcomes in this quadrant correspond to `player1` wins. Similarly, the orange quadrant highlights a similar trend for `player2`, reinforcing the close relationship between these performance metrics and match outcomes."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50af2460",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
