--- a/notebooks/data_processing_and_exploration_v1.ipynb
+++ b/notebooks/data_processing_and_exploration_v1.ipynb
@@ -5,8 +5,8 @@
    "id": "7ed60521",
    "metadata": {},
    "source": [
-    "## Dataset Overview and Source\n",
-    "The dataset comprises performance metrics from two recent darts tournaments, the Players Championship Finals and the Grand Slam of Darts, sourced from [Flashscore.co.uk](https://www.flashscore.co.uk). These metrics will be analysed and used to build a predictive model for match outcomes.\n"
+    "## Dataset Overview and Source *[v1: smaller dataset]*\n",
+    "The dataset comprises performance metrics from two recent darts tournaments, the Players Championship Finals and the Grand Slam of Darts, sourced from [Flashscore.co.uk](https://www.flashscore.co.uk). These metrics will be analysed and used to build a predictive model for match outcomes."
    ]
   },
   {
@@ -147,9 +147,13 @@
     }
    ],
    "source": [
+    "import os \n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"darts_data_v1.csv\")\n",
+    "# Change folder  \n",
+    "os.chdir(\"/Users/samharrison/Documents/data_sci/darts\")\n",
+    "\n",
+    "df = pd.read_csv(\"data/darts_data_v1.csv\")\n",
     "df.head()"
    ]
   },
@@ -1103,7 +1107,21 @@
    "id": "0e17b8a6",
    "metadata": {},
    "source": [
-    "Comparing player performance metrics with match outcomes, we observe the expected relationship: players are more likely to win as their performance metrics improve. For example, the blue quadrant represents matches where `player1` had both a superior three-dart average and checkout rate compared to `player2`, and we notice most outcomes in this quadrant correspond to `player1` wins. Similarly, the orange quadrant highlights a similar trend for `player2`, reinforcing the close relationship between these performance metrics and match outcomes."
+    "- Comparing player performance metrics with match outcomes, we observe the expected relationship: players are more likely to win as their performance metrics improve.\n",
+    "\n",
+    "- For example, the blue quadrant represents matches where `player1` had both a superior three-dart average and checkout rate compared to `player2`, and we notice most outcomes in this quadrant correspond to `player1` wins. \n",
+    "\n",
+    "- Similarly, the orange quadrant highlights a similar trend for `player2`, reinforcing the close relationship between these performance metrics and match outcomes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3698e556",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "The analysis highlights relationships between player performance metrics and match outcomes but is limited by the small dataset ($n=58$ after filtering) and slight imbalance in player wins. Statistical tests suggest some trends may be due to chance rather than true patterns. Collecting more data from additional tournaments will improve the reliability of findings, enable stronger statistical validation, and support more robust predictive modeling."
    ]
   }
  ],
