--- a/notebooks/data_processing_and_exploration_v2.ipynb
+++ b/notebooks/data_processing_and_exploration_v2.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "11b15ec6",
+   "metadata": {},
+   "source": [
+    "## Introduction \n",
+    "\n",
+    "This updated analysis builds on the previous anlaysis by repeating the same steps with a larger dataset, incorporating data from additional darts tournaments. By increasing the dataset size, we aim to enhance the reliability of findings, validate trends observed in the initial analysis, and improve the robustness of predictive modeling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ed60521",
    "metadata": {},
    "source": [
-    "## Dataset Overview and Source\n",
+    "## Dataset Overview and Source *[v2: larger dataset]*\n",
     "The dataset comprises performance metrics from two recent darts tournaments, the Players Championship Finals and the Grand Slam of Darts, sourced from [Flashscore.co.uk](https://www.flashscore.co.uk). These metrics will be analysed and used to build a predictive model for match outcomes.\n"
    ]
   },
@@ -147,9 +157,13 @@
     }
    ],
    "source": [
+    "import os \n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"darts_data_v2.csv\")\n",
+    "# Change folder  \n",
+    "os.chdir(\"/Users/samharrison/Documents/data_sci/darts\")\n",
+    "\n",
+    "df = pd.read_csv(\"data/darts_data_v2.csv\")\n",
     "df.head()"
    ]
   },
@@ -1064,40 +1078,7 @@
    "id": "381dec47",
    "metadata": {},
    "source": [
-    "TO ADD: Commentary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "1695eb66",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "T-statistic: -0.9996685052275056\n",
-      "P-value: 0.31955172187866543\n"
-     ]
-    }
-   ],
-   "source": [
-    "from scipy.stats import ttest_1samp\n",
-    "\n",
-    "# Perform one-sample t-test\n",
-    "t_stat, p_value = ttest_1samp(df['delta_three_dart_avg'], 0)\n",
-    "\n",
-    "print(f\"T-statistic: {t_stat}\")\n",
-    "print(f\"P-value: {p_value}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f862447",
-   "metadata": {},
-   "source": [
-    "TO ADD: Commentary"
+    "After collecting more data, we observe more symmetrical distributions for `delta_checkout_rate` and `delta_three_dart_avg`. This aligns with expectations, as there is no inherent difference between `player1` and `player2`. Consequently, we would expect these metrics to follow balanced distributions centered around zero."
    ]
   },
   {
@@ -1161,7 +1142,7 @@
    "id": "c1232e23",
    "metadata": {},
    "source": [
-    "TO ADD: Commentary"
+    "Similarly, with more data, the match outcome metrics show a more balanced distribution, particularly in the number of wins for `player1` and `player2`, which aligns with expectations."
    ]
   },
   {
@@ -1235,7 +1216,31 @@
    "id": "0e17b8a6",
    "metadata": {},
    "source": [
-    "TO ADD: Commentary"
+    "- With more data, the relationship between better performance metrics and a higher likelihood of winning becomes even more evident. This supports the rationale for analysing these metrics in relation to our goal of predicting match outcomes.\n",
+    "\n",
+    "- Interestingly, a surprising trend emerges. In several cases, particularly near the origin where $(x_{\\Delta \\text{ThreeDartAvg}}, x_{\\Delta \\text{CheckoutRate}}) = (0, 0)$, we observe instances where **one player performed better than the other in both performance metrics, but still lost the match** [1]. \n",
+    "\n",
+    "- This counterintuitive finding warrants further investigation. As we will explore below, there is a reasonable (albeit not immediately obvious) explanation for this phenomenon [2].\n",
+    "\n",
+    "[1]: *These instances are represented visually by blue crosses in the orange region and orange points in the blue region.*\n",
+    "\n",
+    "[2]: *In fact, as we will shall see, this phenomenon is part of what makes darts such an exciting and unpredictable game!*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d64d93a",
+   "metadata": {},
+   "source": [
+    "## The Paradox of Superior Performance: When Winning Metrics Don't Guarantee Victory\n",
+    "\n",
+    "TO ADD:\n",
+    "\n",
+    "- Highlight instances that fall into this category; keep the audience on the same page\n",
+    "- Emphasise that these examples always happen close to the origin; when a player narrowly outperforms the other\n",
+    "- Entice the audience: \"... there is perhaps another variable at play, which we have not considered ...\"\n",
+    "- Dissect a specifc game / throw-by-throw / introduce the idea of \"clutch\" (audience may already have guessed it, especially if familiar with darts) / commonly referred to as timing\n",
+    "- Evidence further with news articles / other statistics e.g. 25% time players ... "
    ]
   }
  ],
